# azure-cognitive-services-rs

./: .gitignore  README.md  response_body.rs
azure-form-recognizer-rs/: Cargo.toml
azure-form-recognizer-rs/src/: lib.rs  request.rs  response.rs
azure-form-recognizer-rs/src/request/: request_client.rs
azure-form-recognizer-rs/src/response/: analyze.rs  errors.rs  manage.rs  operations.rs  response_client.rs
example_responses/: api-example.json  generatecopyauth response schema.json  prebuilt-read.json
